Do not probe timestamps of bundle-backed resources
Resource timestamps are unreliable for resources inside an application
bundle: reproducible builds make jar entry timestamps constant, so a
changed timestamp proves nothing and an unchanged one guarantees
nothing. When a resource resolves through the plain bundle resolver -
production without dev source paths or virtual schema override - the
bundle is immutable and a new bundle is the only signal that files may
be new: cache entries validate by bundle stamp alone, without opening
the resource at all. Mutable resolutions (dev-mode filesystem sources,
node-backed virtual apps and schema overrides) keep the per-access
timestamp probe, where timestamps actually mean something.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_019ns3oGjrFEe8DgtEpU3Eou